// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnstyledButton Component should render the wrapper, start icon, main content, and end icon correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 10,
      },
    ]
  }
  testID="test-id_wrapper"
>
  <View
    style={
      {
        "marginRight": 5,
      }
    }
    testID="test-id_startIcon"
  >
    <Image
      source={
        {
          "uri": "startImage",
        }
      }
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
  <View
    style={
      {
        "justifyContent": "center",
      }
    }
    testID="test-id"
  >
    <View
      style={
        {
          "marginRight": 5,
        }
      }
    >
      <Image
        source={
          {
            "uri": "startImage",
          }
        }
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
      />
    </View>
    <Text>
      Hello world
    </Text>
    <Text>
      Stinky Tofu
    </Text>
    <View
      style={
        {
          "marginLeft": 5,
        }
      }
    >
      <Text>
        ✓
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "marginLeft": 5,
      }
    }
    testID="test-id_endIcon"
  >
    <Text>
      ✓
    </Text>
  </View>
</View>
`;

exports[`UnstyledButton Component should render without start and end icons if they are not provided 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
  testID="test-id_wrapper"
>
  <View
    testID="test-id"
  >
    <Text>
      Hello world
    </Text>
  </View>
</View>
`;
